@@ -49,6 +49,26 @@
     </ul
     
   </div>
+  
+  <ul id="outer">
+    <li>One</li>
+    <li>Two</li>
+    <ul>
+      <li>Nested One</li>
+      <li>Nested Two</li>
+    </ul>
+    <li>Three</li>
+  </ul>
+  
+  <ol id="ol-outer">
+    <li>One</li>
+    <li>Two</li>
+    <ol>
+      <li>Nested One</li>
+      <li>Nested Two</li>
+    </ol>
+    <li>Three</li>
+  </ol>
 
 </body>
 </html>
