@@ -27,6 +27,9 @@ class NestedElementsPage
   h6(:nested_h6) { |page| page.outer_div_element.h6_element }
   paragraph(:nested_paragraph) { |page| page.outer_div_element.paragraph_element }
   file_field(:nested_file_field) { |page| page.outer_div_element.file_field_element }
+
+  unordered_list(:outer_list, :id => 'outer')
+  ordered_list(:ordered_outer, :id => 'ol-outer')
 end
 
 Given /^I am on the nested elements page$/ do
@@ -194,4 +197,16 @@ end
 
 Then /^I should be able to set the nested file field$/ do
   @ff.value = __FILE__
+end
+
+When /^I get the outter unordered list$/ do
+  @list = @page.outer_list_element
+end
+
+When /^I get the outter ordered list$/ do
+  @list = @page.ordered_outer_element
+end
+
+Then /^I should see "([^\"]*)" for list item (\d+)$/ do |text, item_number|
+  @list[item_number.to_i - 1].text.should == text
 end
